SFDCProject/src/objects/Task_Dependency_Template__c.object
<CustomObject>
    <fields>
        <fullName>Child_Task_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Task Template</label>
        <referenceTo>Task_Template__c</referenceTo>
        <relationshipLabel>Task Dependency Templates (Child Task Template)</relationshipLabel>
        <relationshipName>Task_Dependency_Templates2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dependent_Task_Number__c</fullName>
        <formula>Task_Template__r.Task_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Task Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Task_Project_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Task Project Template</label>
        <referenceTo>Project_Template__c</referenceTo>
        <relationshipLabel>Task Dependency Templates</relationshipLabel>
        <relationshipName>Task_Dependency_Templates4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Task_Number__c</fullName>
        <formula>Parent_Task_Template__r.Task_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Task Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Task_Project_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Task Project Template</label>
        <referenceTo>Project_Template__c</referenceTo>
        <relationshipLabel>Task Dependency Templates (Parent Task Project Template)</relationshipLabel>
        <relationshipName>Task_Dependency_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Task_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Task Template</label>
        <referenceTo>Task_Template__c</referenceTo>
        <relationshipLabel>Successor Task Templates</relationshipLabel>
        <relationshipName>Task_Dependency_Templates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Template</label>
        <referenceTo>Project_Template__c</referenceTo>
        <relationshipLabel>Task Dependency Templates (Project Template)</relationshipLabel>
        <relationshipName>Task_Dependency_Templates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Task Template</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>You may only select tasks within the same Project Template.</errorMessage>
            <filterItems>
                <field>$Source.Dependent_Task_Project_Template__c</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Task_Project_Template__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Task_Template__c</referenceTo>
        <relationshipLabel>Predecessor Task Templates</relationshipLabel>
        <relationshipName>Task_Dependency_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Task Dependency Template</label>
    <nameField>
        <displayFormat>PT{00000}</displayFormat>
        <label>Task Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Dependency Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Parent_and_Child_Task_Same_Project</fullName>
        <active>false</active>
        <description>The Parent and Child Task must be from the same Project Template</description>
        <errorConditionFormula>Parent_Task_Template__r.Project_Template__c !=  Task_Template__r.Project_Template__c</errorConditionFormula>
        <errorDisplayField>Task_Template__c</errorDisplayField>
        <errorMessage>Parent and Child Task must be from the same project template.</errorMessage>
    </validationRules>
</CustomObject>